--- a/TicTap Play/index.html
+++ b/TicTap Play/index.html
@@ -199,7 +199,7 @@ body {
 <div class="header">TicTap Play</div>
 
 <div class="header-right">
-  <a href="https://github.com/sreemanrp/playground/TicTap-Play" target="_blank" rel="noopener">Source Code</a>
+  <a href="https://github.com/sreemanrp/Playground/tree/main/TicTap%20Play" target="_blank" rel="noopener">Source Code</a>
 </div>
 
 <div class="wrapper">
