--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="description" content="to build something uniquely, and discover the creativity of Sreeman.">
-  <title>Sreeman's Playground</title>
+  <title>Playground</title>
 
   <style>
     @font-face {
@@ -44,6 +44,6 @@
 </head>
 
 <body>
-  <header>Sreeman's Playground</header>
+  <header>Playground</header>
 </body>
 </html>
