--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <style>
     @font-face {
       font-family: "GeistMono";
-      src: url("./fonts/geistmono.ttf") format("truetype");
+      src: url("/assets/fonts/geistmono.ttf") format("truetype");
       font-display: swap;
     }
 
