--- a/playground/TicTap Play/index.html
+++ b/playground/TicTap Play/index.html
@@ -13,9 +13,9 @@
 
 <style>
 @font-face {
-  font-family: GeistMono;
-  src: url("/fonts/geistmono.ttf") format("truetype");
-  font-display: swap;
+    font-family: "GeistMono";
+    src: url("/assets/fonts/geistmono.ttf") format("truetype");
+    font-display: swap;
 }
 
 :root {
