--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#f2f2f2" />
-  <meta name="description" content="Playground projects showcase" />
+  <meta name="description" content="Building something uniquely." />
   <title>Playground</title>
 
   <style>
