--- a/index.html
+++ b/index.html
@@ -240,7 +240,7 @@
 <main>
   <div class="grid">
 
-    <div class="card openable" data-id="card1" data-link="https://example.com/1">
+    <div class="card openable" data-id="card1" data-link="https://playgrounded.vercel.app/playground/TicTap%20Play">
       <div class="card-header">
         <span>TICTAP PLAY</span>
         <span class="likes">
