Update card link

--- a/index.html
+++ b/index.html
@@ -297,9 +297,9 @@
       </div>
     </div>
 
-    <div class="card openable" data-id="card4" data-link="./playground/2048/index.html">
+    <div class="card openable" data-id="card4" data-link="./playground/2048/2048.html">
       <div class="card-header">
-        <span>BIG EYES</span>
+        <span>2048</span>
         <span class="likes">
           <span class="count">0</span>
           <svg class="heart" width="16" height="16" viewBox="0 0 16 17">
