Replace Big Eyes image with 2048 image

--- a/index.html
+++ b/index.html
@@ -308,7 +308,7 @@
         </span>
       </div>
       <div class="icon-wrapper">
-        <img class="card-image" src="./assets/images/Big Eyes.webp" alt="Card Image">
+        <img class="card-image" src="./assets/images/2048.webp" alt="Card Image">
       </div>
       <div class="card-footer">
         <img class="avatar" src="https://github.com/l0kireddy.png" alt="Avatar">
